<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="#e6e6e6">

        <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="#4999DF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:contentPadding="@dimen/spacing_medium">

                <ImageView
                    android:layout_width="@dimen/spacing_xxxxxlarge"
                    android:layout_height="@dimen/spacing_xxxxxlarge"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/loginTitle"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp">

                <ScrollView
                    android:id="@+id/scroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_mlarge">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loginUserTitle"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="#999999" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="#1E88E5"
                            android:textStyle="bold" />


                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mlarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loginPassTitle"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="#999999" />

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="#1E88E5"
                            android:textStyle="bold" />


                        <CheckBox
                            android:id="@+id/checkBoxRememberMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Remember Me" />

                        <Button
                            android:id="@+id/btnSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:background="@drawable/btn_rounded_primary"
                            android:text="@string/loginSignInTitle"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/loginNoAccountTitle"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                                android:textColor="#E0E0E0" />

                            <TextView
                                android:id="@+id/tvSignUp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/spacing_small"
                                android:layout_marginLeft="@dimen/spacing_small"
                                android:clickable="true"
                                android:text="@string/loginSignUpTitle"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                                android:textColor="#4999DF"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>

            </androidx.cardview.widget.CardView>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

        </LinearLayout>
    </RelativeLayout>


</ScrollView>