<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/signup_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/indigo_600_overlay" />


    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="@dimen/spacing_small"
        android:scrollbarThumbVertical="@color/grey_40"
        android:scrollbars="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:contentPadding="@dimen/spacing_medium" />


            <ImageView
                android:layout_width="130dp"
                android:layout_height="65dp"
                android:src="@mipmap/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_medium"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/f_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_baseline_error_24"
                    app:startIconDrawable="@drawable/ic_baseline_person_add_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/f_name"
                        android:layout_width="match_parent"

                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:hint="First Name"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/l_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_baseline_error_24"
                    app:startIconDrawable="@drawable/ic_baseline_person_add_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/l_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:hint="Last Name"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/u_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_baseline_error_24"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/u_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:hint="@string/signUpEmailHint"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/u_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_baseline_error_24"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/u_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:hint="@string/signUpPasswordHint"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/u_c_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_baseline_error_24"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/u_c_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rect_white_overlay"
                    android:backgroundTint="#D63333"
                    android:foregroundTint="#9C2A2A"
                    android:text="@string/signUpBtnSubmit"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>